# Cashynote-v3

./: .breakpoints  LICENSE  README.md  app.py  database.py  pyproject.toml  style.css
static/: images_we_use.txt
templates/: application_form.html  application_submitted.html  banner.html  bootstrap.html  footer.html  home.html  jobitem.html  jobpage.html  nav.html  style.html
