[tool.poetry]
name = "repl_nix_Cashynote-v3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^2.0.18"
connect = "^0.2"
Flask = "^2.3.2"
Flask-SQLAlchemy = "^3.0.5"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
